test/features/errors/semantic/e1052_invalid_let_else_pattern.spl
# E1052: Invalid Let-Else Pattern

Feature: E1052 - Invalid Let-Else Pattern
  As a Simple compiler
  I want to detect invalid patterns in let-else statements
  So that reference patterns are not used in let-else

  Background:
    Given I have the Simple compiler

  Scenario: Reference pattern in let-else
    When I compile:
      '''
      fn test():
        val Some(mut x) = some_option() else:
          return
        # Error: reference pattern not allowed
      '''
    Then I should see error E1052
    And the error message should be "reference pattern not allowed in let-else"
    And the label should indicate "invalid pattern"
    And the help should suggest "use a non-reference pattern in let-else"

  Scenario: Valid let-else pattern
    When I compile:
      '''
      fn test():
        val Some(x) = some_option() else:
          return
        # OK: simple pattern
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val Some(mut x) = some_option() else:
          return
      '''
    Then I should see error E1052
    And the error message should contain "잘못된 let-else 패턴"
